# kodi-addons

./: .gitignore  CNAME  Makefile.am  README.md  archives.html  authors.html  categories.html  changelog.txt  configure.ac  how_to_install.html  index.html  params.json  release-0.0.4.html  tags.html
addons/: Makefile.am
addons/pvr.lanet.tv-isengard/: Makefile.am  addon.xml.in
addons/pvr.lanettv/: Makefile.am  addon.xml.in
addons/pvr.lanettv-isengard/: .gitignore  Makefile.am  addon.xml.in
pages/: repository.html
project/VS2013Express/: ConfigureAddonXML.bat  buildzip.bat  kodi-pvr-lanettv.sln
project/VS2013Express/libjsoncpp/: libjsoncpp.vcxproj
project/VS2013Express/platform/: platform.vcxproj
project/VS2013Express/pvr.lanettv/: pvr.lanettv.vcxproj
repository.lanet.ua/: addons.xml  addons.xml.md5  addons_xml_generator.py
repository.lanet.ua/addons/pvr.lanet.tv-isengard/: addon.xml
repository.lanet.ua/addons/pvr.lanettv/: addon.xml  changelog.txt
repository.lanet.ua/addons/pvr.lanettv-isengard/: addon.xml
repository.lanet.ua/addons/repository.lanet.ua/: addon.xml
repository.lanet.ua/pvr.lanettv/: changelog-0.0.4.txt
src/: Makefile.am
src/lanettv/: Makefile.am  PVRLanetTVData.cpp  PVRLanetTVData.h  client.cpp  client.h
src/lib_json/: Makefile.am
tag/: helix.html  kodi.html  repository.html
theme/css/: style.css
theme/js/: lightbox.min.js
